In class StartupListView in context add 'is_paginated': page.has_other_pages(). In template check 'if is_paginated'.

--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -33,7 +33,7 @@
         </a>
     </button>
 </div>
-{% if startup_list.has_other_pages %}
+{% if is_paginated %}
     <nav class="blog-pagination">
         <ul>
             {% if startup_list.has_previous %}
