--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -38,7 +38,8 @@
         <ul>
             {% if startup_list.has_previous %}
                 <li>
-                    <a class="btn btn-outline-primary" href="">
+                    <a class="btn btn-outline-primary"
+                       href="?page={{ startup_list.previous_page_number }}">
                         Previous
                     </a>
                 </li>
@@ -49,7 +50,8 @@
             </li>
             {% if startup_list.has_next %}
                 <li>
-                    <a class="btn btn-outline-secondary" href="">
+                    <a class="btn btn-outline-secondary"
+                       href="?page={{ startup_list.next_page_number }}">
                         Next
                     </a>
                 </li>
