--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -47,7 +47,7 @@
         Page {{ tag_list.number }}
         of  {{ paginator.num_pages }}
     </li>
-    {% if next_page_url }
+    {% if next_page_url %}
         <li>
             <a href="{{ next_page_url }}">
                 Next
