Refactor default.html with default:flat_base.html.

--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends parent_template|default:"base.html" %}
+{% extends parent_template|default:"flat_base.html" %}
 
 {% block title %}
 {{ block.super }} - {{ flatpage.title }}
