Add {% load flatpages %} {% get_flatpages as flatpages %}.

--- a/templates/flat_base.html
+++ b/templates/flat_base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load flatpages %}
+{% get_flatpages as flatpages %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
