--- a/templates/flat_base.html
+++ b/templates/flat_base.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-{% load flatpages %}
-{% get_flatpages as flatpages %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,7 +25,7 @@
     </title>
 
     <!--CSS for Django-->
-    <!--Bootstrap core CSS-->
+    <!--Bootstrap 3.3.7 core CSS-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
