--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
     <!-- Custom styles for Blog -->
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
+    <!-- Custom template apps specific -->
+    {% block head %}{% endblock %}
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
