--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,9 +1,11 @@
 /*
  * Globals
  */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, "Roboto", sans-serif;
   color: #555;
 }
 
@@ -14,7 +16,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   margin-top: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "PT Serif", serif;
   font-weight: normal;
   color: #333;
 }
