--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 body {
-  font-family: Georgia, "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #555;
 }
 
