--- a/templates/header_navbar/header_navbar.html
+++ b/templates/header_navbar/header_navbar.html
@@ -4,13 +4,14 @@
 <div class="blog-masthead">
     <div class="container">
         <nav class="blog-nav">
+            <img class="blog-nav-img" src="{% static 'img/logo.png' %}" alt="Logo">
             <a class="blog-nav-item active" href="/">Home</a>
             <a class="blog-nav-item" href="{% url 'blog_post_list' %}">Blog</a>
             <a class="blog-nav-item" href="{% url 'organizer_startup_list' %}">Startups</a>
             <a class="blog-nav-item" href="{% url 'organizer_tag_list' %}">Tags</a>
             <a class="blog-nav-item" href="{% url 'contact' %}">Contact</a>
             {% for page in flatpages %}
-                <a href="{{ page.get_absolute_url }}" class="blog-nav-color">
+                <a href="{{ page.get_absolute_url }}" class="blog-nav-item">
                     {{ page.title }}
                 </a>
             {% endfor %}
