Move  <h1>Startup Organizer</h1> <p>Organizer of startups</p> to post_list.html

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,14 @@
 {% endblock %}
 
 {% block content %}
-
+<!-- Blog header-->
+<div class="blog-header" id="top">
+    <div class="container">
+        <h1 class="blog-title">Startup Organizer</h1>
+        <p class="lead blog-description">Organizer of startups</p>
+    </div>
+</div>
+<!--/ Blog header-->
 {% for post in post_list %}
 <article>
     <header>
