--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -64,6 +64,7 @@ h6, .h6 {
 .blog-nav .active {
   color: #fff;
 }
+
 .blog-nav .active:after {
   position: absolute;
   bottom: 0;
@@ -120,6 +121,7 @@ h6, .h6 {
   margin: 0 -15px 15px;
 }
 .sidebar-module-inset {
+  margin-top: 260px;
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 4px;
