--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h2>Startup List</h2>
+<h2 class="blog-startup-title">Startup List</h2>
 <ul class="list-group">
     {% for startup in startup_list %}
     <li class="list-group-item">
