--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -92,17 +92,18 @@ h6, .h6 {
 
 .blog-header {
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 0px;
 }
 .blog-title {
   margin-top: 30px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   font-size: 60px;
   font-weight: normal;
 }
 .blog-description {
   font-size: 20px;
   color: #999;
+  margin-bottom: 6px;
 }
 
 
@@ -121,7 +122,7 @@ h6, .h6 {
   margin: 0 -15px 15px;
 }
 .sidebar-module-inset {
-  margin-top: 260px;
+  margin-top: 198px;
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 4px;
@@ -315,3 +316,7 @@ h6, .h6 {
     font-weight: 500;
 }
 
+.blog-startup-title {
+    margin-top: 30px;
+    margin-bottom: 14px;
+}
