--- a/templates/flat_base.html
+++ b/templates/flat_base.html
@@ -43,7 +43,7 @@
 <body>
 
 <!--Blog navbar header -->
-{% include "header_navbar/header_navbar.html" %}
+{% include "partials/header_navbar.html" %}
 <!--/ Blog navbar header -->
 
 <!-- Blog header-->
@@ -55,7 +55,7 @@
 </div>
 <!--/ Blog header-->
 <!-- Messages -->
-    {% include "messages/messages.html" %}
+    {% include "partials/messages.html" %}
 <!--/ Messages -->
 <div class="container">
 
