--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -3,9 +3,10 @@
         <a href="https://DmitryForge.com/">
             Dmitry Kalnynsh
         </a>
-        Created based on <a href="https://Django-Unleashed.com/">
-            Django Unleashed</a>
-    <p>
-        <a href="#">Back to top</a>
+
+         Created based on
+            <a href="https://Django-Unleashed.com/">
+                Django Unleashed.
+            </a>
     </p>
 </footer>
