--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -169,18 +169,22 @@ h6, .h6 {
  */
 
 .blog-footer {
-  padding: 40px 0;
+  padding: 26px 0;
   color: #999;
   text-align: left;
   background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
 }
-.blog-footer p:first-child {
+.blog-footer p {
     margin-left: 25%;
+    margin-bottom: 4px;
 }
 
 .blog-footer p:last-child {
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 27.4%;
+    padding: 0;
 }
 
 
