Update makeup for form, add class contact-form.

--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -5,11 +5,13 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'contact' %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">
-        Contact Us!
-    </button>
-</form>
+<div class="contact-form">
+    <form action="{% url 'contact' %}" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">
+            Contact Us!
+        </button>
+    </form>
+</div>
 {% endblock %}
