--- a/blog/templates/blog/post_form_update.html
+++ b/blog/templates/blog/post_form_update.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div>
+<div class="post-form-update">
     <div>
         <form action="{{ post.get_update_url }}" method="post">
 
