--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
 <article>
 
     <header>
-        <h2>{{ post.title|title }}</h2>
+        <h2 class="blog-post-detail-title">{{ post.title|title }}</h2>
         <div class="blog-button-edit-post">
             <button type="button" class="btn btn-primary">
                 <a href="{{ post.get_update_url }}">Edit Post</a>
