Update makeup add class="blog-startup-title".

--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -9,7 +9,7 @@
 
 <article>
 
-    <h2>{{ startup.name }}</h2>
+    <h2 class="blog-startup-title">{{ startup.name }}</h2>
     <div class="blog-edit-startup">
         <a href="{{ startup.get_update_url }}">
             <span class="label label-default">Edit Startup</span>
