--- a/organizer/templates/organizer/tag_confirm_delete.html
+++ b/organizer/templates/organizer/tag_confirm_delete.html
@@ -5,26 +5,23 @@
 {% endblock %}
 
 {% block content %}
+<div class="blog-tag-delete-confirm">
 <form action="{{ tag.get_delete_url }}" method="post">
     {% csrf_token %}
-
-        <div class="input-group">
-            <div class="form-control">
-                Are you sure, you want to delete tag {{ tag.name }}?
-            </div>
+        <div class="blog-tag-delete-confirm-label label-danger">            
+                Are you sure, you want to delete tag {{ tag.name }}?            
         </div>
-        <br>
-    <div class="row">
-        <div class="blog-btn-tag-cancel-delete">
-            <div class="col-md-offset-2 col-md-4">
-                <button type="button" class="btn btn-primary">
+
+        <div class="blog-btns-cancel-delete">
+
+                <button type="button" class="btn btn-info">
                     <a href="{{ tag.get_absolute_url }}">Cancel</a>
                 </button>
-                <button type="submit" class="btn btn-danger">
+                <button type="submit" class="btn btn-warning">
                     Delete Tag
                 </button>
-            </div>
+
         </div>
-    </div>
 </form>
+</div>
 {% endblock %}
