--- a/organizer/templates/organizer/newslink_confirm_delete.html
+++ b/organizer/templates/organizer/newslink_confirm_delete.html
@@ -5,26 +5,21 @@
 {% endblock %}
 
 {% block content %}
+<div class="blog-newslink-delete-confirm">
 <form action="{{ newslink.get_delete_url }}" method="post">
     {% csrf_token %}
-
-        <div class="input-group">
-            <div class="form-control">
+        <div class="blog-newslink-delete-confirm-label">
                 Are you sure, you want to delete link
                 to article {{ newslink.name }}?
-            </div>
         </div>
-        <br>
-    <div class="row">
-        <div class="col-md-offset-9 col-md-3">
-            <button type="button" class="btn btn-danger">
+        <div class="blog-btns-cancel-delete">
+            <button type="button" class="btn btn-info">
                 <a href="{{ newslink.get_absolute_url }}">Cancel</a>
             </button>
-            <br>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-warning">
                 Delete Article Link
             </button>
         </div>
-    </div>
 </form>
+</div>
 {% endblock %}
