--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -10,12 +10,19 @@
 <article>
 
     <h2 class="blog-startup-title">{{ startup.name }}</h2>
-    <div class="blog-edit-startup">
-        <a href="{{ startup.get_update_url }}">
-            <span class="label label-default">Edit Startup</span>
-        </a>
-    </div>
-    <dl>
+    <ul class="blog-startup-edit-delete"><!-- blog-edit-startup -->
+        <li>
+            <a href="{{ startup.get_update_url }}">
+                <span class="label label-info">Edit Startup</span>
+            </a>
+        </li>
+        <li>
+            <a href="{{ startup.get_delete_url }}">
+                <span class="label label-danger">Delete Startup</span>
+            </a>
+        </li>
+    </ul>
+    <dl class="blog-startup-dl">
         <dt>Date Founded</dt>
         <dd>{{ startup.founded_date|date:"F jS, Y" }}</dd>
         <dt>Website</dt>
@@ -36,56 +43,67 @@
 
    {{ startup.description|linebreaks }}
 
-    {% if startup.newslink_set.all %}
-    <section>
-        <h3>Recent News</h3>
+    {% if startup.newslink_set.all or startup.blog_posts.all %}
+    <div class="row">
+        {% if startup.newslink_set.all %}
+            {% if startup.blog_posts.all %}
+                <section class="col-sm-4 col-offset-sm-2">
+            {% else %
+                <section class="col-sm-8 col-offset-sm-2">
+            {% endif %}
+                    <h3>Recent News</h3>
 
-        <ul class="list-group">
-            {% for newslink in startup.newslink_set.all %}
-            <li class="list-group-item">
-                <a href="{{ newslink.link }}">
-                    {{ newslink.title|title }}
-                </a>
-                <ul class="blog-link-edit-delete">
-                    <li>
-                        <a href="{{ newslink.get_update_url }}">
-                               <span class="label label-info">Edit Link</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ newslink.get_delete_url }}">
-                               <span class="label label-danger">Delete Link</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            {% endfor %}
-        </ul>
-        <div class="blog-btn-add-article">
-            <button class="btn btn-info">
-                <a href="{% url 'organizer_newslink_create' %}">
-                    Add Article
-                </a>
-            </button>
-        </div>
-    </section>
-    {% endif %}
+                    <ul class="list-group">
+                        {% for newslink in startup.newslink_set.all %}
+                        <li class="list-group-item">
+                            <a href="{{ newslink.link }}">
+                                {{ newslink.title|title }}
+                            </a>
+                            <ul class="blog-link-edit-delete">
+                                <li>
+                                    <a href="{{ newslink.get_update_url }}">
+                                           <span class="label label-info">Edit Link</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ newslink.get_delete_url }}">
+                                           <span class="label label-danger">Delete Link</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    <div class="blog-btn-add-article">
+                        <button class="btn btn-info">
+                            <a href="{% url 'organizer_newslink_create' %}">
+                                Add Article
+                            </a>
+                        </button>
+                    </div>
+                </section>
+        {% endif %}
 
-    {% if startup.blog_posts.all %}
-    <section>
-        <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
-        <ul class="list-group">
-            {% for post in startup.blog_posts.all %}
-            <li class="list-group-item">
-                <a href="{{ post.get_absolute_url }}">
-                    {{ post.title|title }}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </section>
+        {% if startup.blog_posts.all %}
+            {% if startup.newslink_set.all %}
+                <section class="col-sm-4">
+            {% else %}
+                <section class="col-sm-8 col-offset-sm-2">
+            {% endif %}
+                    <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
+                    <ul class="list-group">
+                        {% for post in startup.blog_posts.all %}
+                        <li class="list-group-item">
+                            <a href="{{ post.get_absolute_url }}">
+                                {{ post.title|title }}
+                            </a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </section>
+        {% endif %}
+    </div>  <!--/ row -->
     {% endif %}
 
 </article>
-
 {% endblock content %}
