--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -37,7 +37,7 @@
             Read more&hellip;
         </a>
     </p>
-    <div class="blog-post-edit-btn btn btn-default">
+    <div class="blog-post-edit-btn btn btn-info">
         <a href="{{ post.get_update_url }}">
             Edit Post
         </a>
