--- a/organizer/templates/organizer/newslink_form_update.html
+++ b/organizer/templates/organizer/newslink_form_update.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="blog-startup-form-update">
 <form action="{{ url newslink.get_update_url }}" method="post">
     {% csrf_token %}
     {% for field in form %}
@@ -31,4 +32,5 @@
         </div>
     </div>
 </form>
+</div>
 {% endblock %}
