--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -44,14 +44,15 @@
    {{ startup.description|linebreaks }}
 
     {% if startup.newslink_set.all or startup.blog_posts.all %}
+    <div class="container-fluid">
     <div class="row">
         {% if startup.newslink_set.all %}
             {% if startup.blog_posts.all %}
-                <section class="col-sm-4 col-offset-sm-2">
-            {% else %
-                <section class="col-sm-8 col-offset-sm-2">
+                <section class="col-sm-6">
+            {% else %}
+                <section class="col-sm-12">
             {% endif %}
-                    <h3>Recent News</h3>
+                    <h3 class="blog-startup-h3">Recent News</h3>
 
                     <ul class="list-group">
                         {% for newslink in startup.newslink_set.all %}
@@ -86,11 +87,11 @@
 
         {% if startup.blog_posts.all %}
             {% if startup.newslink_set.all %}
-                <section class="col-sm-4">
+                <section class="col-sm-6">
             {% else %}
-                <section class="col-sm-8 col-offset-sm-2">
+                <section class="col-sm-12">
             {% endif %}
-                    <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
+                    <h3 class="blog-startup-h3">Blog Post{{ startup.blog_posts.all|pluralize }}</h3>
                     <ul class="list-group">
                         {% for post in startup.blog_posts.all %}
                         <li class="list-group-item">
@@ -103,6 +104,7 @@
                 </section>
         {% endif %}
     </div>  <!--/ row -->
+    </div>
     {% endif %}
 
 </article>
