--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<h2>{{ tag.name|title }}</h2>
+<h2 class="blog-tag-detail-h2">{{ tag.name|title }}</h2>
 <ul class="blog-tag-edit-delete">
     <li>
         <a href="{{ tag.get_update_url }}">
@@ -22,37 +22,39 @@
 </ul>
 {% if tag.startup_set.all %}
 <section>
-<h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
-<p>
-    Tag is associated with
-    {{ tag.startup_set.count }}
-    startup{{ tag.startup_set.count|pluralize }}.
-</p>
-<ul>
-    <!-- list of startups related to tag -->
-    {% for startup in tag.startup_set.all %}
-    <li>
-        <a href="{{ startup.get_absolute_url }}">
-        {{ startup.name }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+    <h3 class="blog-tag-detail-h3">Startup{{ tag.startup_set.count|pluralize }}</h3>
+    <p>
+        Tag is associated with
+        {{ tag.startup_set.count }}
+        startup{{ tag.startup_set.count|pluralize }}.
+    </p>
+    <ul>
+        <!-- list of startups related to tag -->
+        {% for startup in tag.startup_set.all %}
+        <li>
+            <a href="{{ startup.get_absolute_url }}">
+            {{ startup.name }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
 </section>
 {% endif %}
 {% if tag.blog_posts.all %}
 <section>
-<h3>Blog Post{{ tag.blog_posts.count|pluralize }}</h3>
-<ul>
-    <!-- list of posts related to tag -->
-    {% for post in tag.blog_posts.all %}
-    <li>
-        <a href="{{ post.get_absolute_url }}">
-           {{ post.title|title }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+    <h3 class="blog-tag-detail-h3">
+        Blog Post{{ tag.blog_posts.count|pluralize }}
+    </h3>
+    <ul>
+        <!-- list of posts related to tag -->
+        {% for post in tag.blog_posts.all %}
+        <li>
+            <a href="{{ post.get_absolute_url }}">
+               {{ post.title|title }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
 </section>
 {% endif %}
 {% if not tag.startup_set.all and not tag.blog_posts.all %}
