--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -465,6 +465,7 @@ h6, .h6 {
     margin: 20px 0 10px 0;
 }
 
-.blog-post-archive-year-h2 {
+.blog-post-archive-year-h2,
+.blog-post-archive-year-h3 {
     margin: 20px 0 10px 0;
 }
