--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -53,7 +53,7 @@
         {% endfor %}
     </div>
     <div class="col-md-4">
-        <div class="blog-btn-new-blog">
+        <div class="blog-btn-new-blog hidden">
             <button type="button" class="btn btn-info">
                 <a href="{% url 'blog_post_create' %}">
                     Write New Blog Post
