--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -7,52 +7,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8">
-        <div class="blog-btn-new-blog">
-            <button type="button" class="btn btn-info">
-                <a href="{% url 'blog_post_create' %}">
-                    Write New Blog Post
-                </a>
-            </button>
-        </div>
-        <h2>All Posts for {{ year|date:'Y' }}</h2>
-        {% for post in post_list %}
-            <article>
-                <header>
-                    <h3 class="blog-post-archive-year-h3">
-                        <a href="{{ post.get_absolute_url }}">
-                            {{ post.title|title }}
-                        </a>
-                    </h3>
 
-                    <div class="blog-post-edit-btn btn btn-info">
-                        <a href="{{ post.get_update_url }}">
-                            Edit Post
-                        </a>
-                    </div>
-                    <div class="blog-post-delete-btn btn btn-danger">
-                        <a href="{{ post.get_delete_url }}">
-                            Delete Post
-                        </a>
-                    </div>
-                        <p>
-                        Written on:
-                        <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
-                            {{ post.pub_date|date:"l, F j, Y" }}
-                        </time>
-                    </p>
-                </header>
-                <p>
-                    {{ post.text|truncatewords:20 }}
-                </p>
-                <p>
-                    <a href="{{ post.get_absolute_url }}">
-                        Read more&hellip;
-                    </a>
-                </p>
-            </article>
-        {% endfor %}
-    </div>
-    <div class="col-md-4">
         <div class="blog-btn-new-blog hidden">
             <button type="button" class="btn btn-info">
                 <a href="{% url 'blog_post_create' %}">
@@ -60,6 +15,45 @@
                 </a>
             </button>
         </div>
+
+        <h2 class="blog-post-archive-year-h2">All Posts for {{ year|date:'Y' }}</h2>
+        {% for post in post_list %}
+        <article>
+            <header>
+                <h3 class="blog-post-archive-year-h3">
+                    <a href="{{ post.get_absolute_url }}">
+                        {{ post.title|title }}
+                    </a>
+                </h3>
+                <p>
+                    Written on:
+                    <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
+                        {{ post.pub_date|date:"l, F j, Y" }}
+                    </time>
+                </p>
+            </header>
+            <p>
+                {{ post.text|truncatewords:20 }}
+            </p>
+            <p>
+                <a href="{{ post.get_absolute_url }}">
+                    Read more&hellip;
+                </a>
+            </p>
+            <div class="blog-post-edit-btn btn btn-info">
+                <a href="{{ post.get_update_url }}">
+                    Edit Post
+                </a>
+            </div>
+            <div class="blog-post-delete-btn btn btn-danger">
+                <a href="{{ post.get_delete_url }}">
+                    Delete Post
+                </a>
+            </div>
+        </article>
+        {% endfor %}
+    </div>
+    <div class="col-md-4">
         <h3 class="blog-post-archive-year-h2">
             Archives by Month
         </h3>
@@ -72,30 +66,37 @@
             </li>
             {% endfor %}
         </ul>
-    </div>
-</div>
-    <div class="row">
-        <div class="col-md-12">
-            <nav aria-label="...">
-                <ul class="pager">
-                    {% if previous_year %}
-                    <li>
-                        <a href="{% url 'blog_post_archive_year' previous_year|date:'Y' %}">
-                            <span aria-hidden="true">&larr;</span>
-                            Posts from {{ previous_year|date:'Y' }}
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if next_year %}
-                    <li>
-                        <a href="{% url 'blog_post_archive_year' next_year|date:'Y' %}">
-                            Posts from {{ next_year|date:'Y' }}
-                            <span aria-hidden="true">&rarr;</span>
-                        </a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </nav>
+        <div class="blog-btn-new-blog">
+            <button type="button" class="btn btn-info">
+                <a href="{% url 'blog_post_create' %}">
+                    Write New Blog Post
+                </a>
+            </button>
         </div>
     </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <nav aria-label="...">
+            <ul class="pager">
+                {% if previous_year %}
+                <li>
+                    <a href="{% url 'blog_post_archive_year' previous_year|date:'Y' %}">
+                        <span aria-hidden="true">&larr;</span>
+                        Posts from {{ previous_year|date:'Y' }}
+                    </a>
+                </li>
+                {% endif %}
+                {% if next_year %}
+                <li>
+                    <a href="{% url 'blog_post_archive_year' next_year|date:'Y' %}">
+                        Posts from {{ next_year|date:'Y' }}
+                        <span aria-hidden="true">&rarr;</span>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
+</div>
 {% endblock %}
