--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,58 +6,58 @@
 {% endblock %}
 
 {% block content %}
-
-<!-- Blog header-->
-<div class="blog-header" id="top">
-    <div class="container">
-        <h1 class="blog-title">Startup Organizer</h1>
-        <p class="lead blog-description">Organizer of startups</p>
+<div class="col-md-8">
+    <!-- Blog header-->
+    <div class="blog-header" id="top">
+        <div class="container">
+            <h1 class="blog-title">Startup Organizer</h1>
+            <p class="lead blog-description">Organizer of startups</p>
+        </div>
     </div>
-</div>
-<!--/ Blog header-->
-{% for post in post_list %}
-<article>
-    <header>
-        <h2 class="blog-post-list-h2">
-            <a href="{{ post.get_absolute_url }}">
-                {{ post.title|title }}
-            </a>
-        </h2>
+    <!--/ Blog header-->
+    {% for post in post_list %}
+    <article>
+        <header>
+            <h2 class="blog-post-list-h2">
+                <a href="{{ post.get_absolute_url }}">
+                    {{ post.title|title }}
+                </a>
+            </h2>
+            <p>
+                Written on:
+                <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
+                    {{ post.pub_date|date:"l, F j, Y" }}
+                </time>
+            </p>
+        </header>
         <p>
-            Written on:
-            <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
-                {{ post.pub_date|date:"l, F j, Y" }}
-            </time>
+            {{ post.text|truncatewords:20 }}
         </p>
-    </header>
-    <p>
-        {{ post.text|truncatewords:20 }}
-    </p>
-    <p>
-        <a href="{{ post.get_absolute_url }}">
-            Read more&hellip;
+        <p>
+            <a href="{{ post.get_absolute_url }}">
+                Read more&hellip;
+            </a>
+        </p>
+        <div class="blog-post-edit-btn btn btn-info">
+            <a href="{{ post.get_update_url }}">
+                Edit Post
+            </a>
+        </div>
+        <div class="blog-post-delete-btn btn btn-danger">
+            <a href="{{ post.get_delete_url }}">
+                Delete Post
+            </a>
+        </div>
+    </article>
+    {% empty %}
+    <p><em>No Blog Posts Available</em></p>
+    {% endfor %}
+    <div class="blog-btn-new-blog">
+    <button type="button" class="btn btn-info">
+        <a href="{% url 'blog_post_create' %}">
+            Write New Blog Post
         </a>
-    </p>
-    <div class="blog-post-edit-btn btn btn-info">
-        <a href="{{ post.get_update_url }}">
-            Edit Post
-        </a>
+    </button>
     </div>
-    <div class="blog-post-delete-btn btn btn-danger">
-        <a href="{{ post.get_delete_url }}">
-            Delete Post
-        </a>
-    </div>
-</article>
-{% empty %}
-<p><em>No Blog Posts Available</em></p>
-{% endfor %}
-<div class="blog-btn-new-blog">
-<button type="button" class="btn btn-info">
-    <a href="{% url 'blog_post_create' %}">
-        Write New Blog Post
-    </a>
-</button>
 </div>
 {% endblock content %}
-
