--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,69 +4,70 @@
 {{ block.super }} - {{ post.title|title }}
 
 {% block content %}
-<article>
+<div class="col-md-8">
+    <article>
 
-    <header>
-        <h2 class="blog-post-detail-title">{{ post.title|title }}</h2>
-        <div class="blog-button-edit-post">
-            <button type="button" class="btn btn-primary">
-                <a href="{{ post.get_update_url }}">Edit Post</a>
-            </button>
+        <header>
+            <h2 class="blog-post-detail-title">{{ post.title|title }}</h2>
+            <div class="blog-button-edit-post">
+                <button type="button" class="btn btn-primary">
+                    <a href="{{ post.get_update_url }}">Edit Post</a>
+                </button>
+            </div>
+            <div class="blog-button-delete-post">
+                <button type="button" class="btn btn-warning">
+                    <a href="{{ post.get_delete_url }}">Delete Post</a>
+                </button>
+            </div>
+            <p>
+                Written on
+                <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
+                    {{ post.pub_date|date:"l, F j, Y" }}
+                </time>
+            </p>
+        </header>
+
+        <div>
+            {{ post.text|linebreaks }}
         </div>
-        <div class="blog-button-delete-post">
-            <button type="button" class="btn btn-warning">
-                <a href="{{ post.get_delete_url }}">Delete Post</a>
-            </button>
-        </div>
-        <p>
-            Written on
-            <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
-                {{ post.pub_date|date:"l, F j, Y" }}
-            </time>
-        </p>
-    </header>
 
-    <div>
-        {{ post.text|linebreaks }}
-    </div>
-
-        {% if post.startups.all or post.tags.all %}
-            <footer> <!--The footer for article -->
-                {% if post.startups.all %}
-                <section>
-                    <h3 class="h3-post-detail">
-                        Startup{{ post.startups.count|pluralize }}
-                    </h3>
-                    <ul class="list-group">
-                            {% for startup in post.startups.all %}
-                            <li class="list-group-item">
-                    <a href="{{ startup.get_absolute_url }}">
-                        {{ startup.name }}
-                    </a>
-                    </li>
-                    {% endfor %}
-                    </ul>
-                </section>
-                {% endif %}
-
-                {% if post.tags.all %}
-                <section>
-                    <h3 class="h3-post-detail">Tag{{ post.tags.count|pluralize }}</h3>
-                    <ul class="list-group">
-                        {% for tag in post.tags.all %}
-                            <li class="list-group-item">
-                                <a href="{{ tag.get_absolute_url }}">
-                                    {{ tag.name|title }}
-                                </a>
-                            </li>
+            {% if post.startups.all or post.tags.all %}
+                <footer> <!--The footer for article -->
+                    {% if post.startups.all %}
+                    <section>
+                        <h3 class="h3-post-detail">
+                            Startup{{ post.startups.count|pluralize }}
+                        </h3>
+                        <ul class="list-group">
+                                {% for startup in post.startups.all %}
+                                <li class="list-group-item">
+                        <a href="{{ startup.get_absolute_url }}">
+                            {{ startup.name }}
+                        </a>
+                        </li>
                         {% endfor %}
-                    </ul>
-                </section>
-                {% endif %}
-            </footer>
+                        </ul>
+                    </section>
+                    {% endif %}
 
-        {% endif %}
+                    {% if post.tags.all %}
+                    <section>
+                        <h3 class="h3-post-detail">Tag{{ post.tags.count|pluralize }}</h3>
+                        <ul class="list-group">
+                            {% for tag in post.tags.all %}
+                                <li class="list-group-item">
+                                    <a href="{{ tag.get_absolute_url }}">
+                                        {{ tag.name|title }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </section>
+                    {% endif %}
+                </footer>
 
-</article>
+            {% endif %}
 
+    </article>
+</div>
 {% endblock content %}
