Wrap content block to <div class="col-md-8">.

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div>
+<div class="col-md-8">
     <div>
         <form action="{% url 'blog_post_create' %}" method="post">
 
